# Haskram

./: README.md  haskram.cabal  makefile  mmaclone.cabal  stack.yaml
app/: Main.hs
src/: Test.hs
src/Data/: Attribute.hs  DataType.hs
src/Data/Environment/: Environment.hs  EnvironmentType.hs  Update.hs
src/Data/Number/: Number.hs
src/Eval/: Eval.hs  EvalHead.hs
src/Eval/Patt/: Pattern.hs  PatternPrimi.hs  Regengine.hs
src/Eval/Primitive/: PrimiFunc.hs  Primitives.hs
src/Eval/Primitive/Arithmatic/: Arithmatic.hs
src/Eval/Primitive/Attributes/: Attributes.hs
src/Eval/Primitive/Compare/: Compare.hs
src/Eval/Primitive/Control/: Branch.hs
src/Eval/Primitive/Function/: Lambda.hs
src/Eval/Primitive/IO/: Print.hs
src/Eval/Primitive/InOut/: InOut.hs
src/Eval/Primitive/List/: Cons.hs  Elem.hs  Level.hs  List.hs  Map.hs  Part.hs
src/Eval/Primitive/Logic/: Logic.hs
src/Eval/Primitive/Module/: Module.hs
src/Eval/Primitive/Nest/: Nest.hs
src/Eval/Primitive/Replace/: Replace.hs  Unpack.hs
src/Eval/Primitive/Set/: Set.hs
src/Parser/: NewParse.hs  Trans.hs
src/Show/: Pretty.hs
test/Data/Number/: NumberSpec.hs
test/Eval/: EvalSpec.hs
test/Parser/: NewParseSpec.hs  TransSpec.hs
