name:          mmaclone
version:       0.1.0.0
synopsis:      Initial project template from stack
description:   Please see README.md
homepage:      http://github.com/githubuser/mmaclone#readme
license:       BSD3
license-file:  LICENSE
author:        Yonghao Jin
maintainer:    jyh1@mail.ustc.edu.cn
copyright:     2016 Y. Jin
category:      None
build-type:    Simple

-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs:   src
  exposed-modules:
    Data.Attribute
    Data.DataType
    Data.Environment.Environment
    Data.Environment.EnvironmentType
    Data.Environment.Update
    Data.Number.Number
    Eval.Eval
    Eval.EvalHead
    Eval.Patt.Pattern
    Eval.Patt.PatternPrimi
    Eval.Patt.Regengine
    Eval.Primitive.Arithmatic.Arithmatic
    Eval.Primitive.Attributes.Attributes
    Eval.Primitive.Compare.Compare
    Eval.Primitive.Control.Branch
    Eval.Primitive.Function.Lambda
    Eval.Primitive.InOut.InOut
    Eval.Primitive.IO.Print
    Eval.Primitive.List.Cons
    Eval.Primitive.List.Elem
    Eval.Primitive.List.Level
    Eval.Primitive.List.List
    Eval.Primitive.List.Map
    Eval.Primitive.List.Part
    Eval.Primitive.Logic.Logic
    Eval.Primitive.Module.Module
    Eval.Primitive.Nest.Nest
    Eval.Primitive.PrimiFunc
    Eval.Primitive.Primitives
    Eval.Primitive.Replace.Replace
    Eval.Primitive.Replace.Unpack
    Eval.Primitive.Set.Set
    Parser.NewParse
    Parser.Trans
    Show.Pretty
    Test

  -- , Eval.Primitive.PrimiType
  build-depends:
      base          >=4.7 && <5
    , containers
    , hspec
    , lens
    , mtl
    , parsec
    , QuickCheck
    , text
    , transformers

  default-language: Haskell2010
  extensions:       OverloadedStrings

executable mmaclone-exe
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N1
  build-depends:
      base
    , haskeline
    , lens
    , mmaclone
    , mtl
    , text
    , transformers

  default-language: Haskell2010

test-suite mmaclone-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
      base
    , hspec
    , mmaclone
    , mtl
    , parsec
    , QuickCheck
    , text
    , transformers

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  extensions:       OverloadedStrings
  other-modules:
    Data.Number.NumberSpec
    Eval.EvalSpec
    Parser.NewParseSpec
    Parser.TransSpec

source-repository head
  type:     git
  location: https://github.com/jyh1/mmaclone
